app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-example
spec:
  selector:
    app: httpbin
  ports:
  - name: service-port
    port: 8000
    targetPort: 80
