app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway-example
  namespace: ingress
  annotations:
    "service.beta.kubernetes.io/oci-load-balancer-shape": "flexible"
    "service.beta.kubernetes.io/oci-load-balancer-shape-flex-min": "10"
    "service.beta.kubernetes.io/oci-load-balancer-shape-flex-max": "10"
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
