app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-example
  namespace: default
spec:
  parentRefs:
  - name: gateway-example
    namespace: ingress
  rules:
  - backendRefs:
    - name: service-example
      port: 8000
